--- a/web1.html
+++ b/web1.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>MyWeb</title>
-    </head>
-    <body>
-        <div>
-            <h1>Hola amigos de platzi, que buen curso hasta ahora.</h1>
-        </div>
-    </body>
+
+<head>
+    <title>MyWeb</title>
+</head>
+
+<body>
+    <div>
+        <h1>Hola amigos de platzi, que buen curso hasta ahora.</h1>
+        <h2>No olvidar tomar el curso de Git y Github</h2>
+    </div>
+</body>
+
 </html>
